--- a/assets/css/runbuddystyle.css
+++ b/assets/css/runbuddystyle.css
@@ -65,3 +65,8 @@ footer div {
 footer a {
     color: #024e76
 }
+
+section {
+    padding: 60px;
+    background-image: url("../images/hero-bg.jpg");
+}
