--- a/assets/css/runbuddystyle.css
+++ b/assets/css/runbuddystyle.css
@@ -225,3 +225,43 @@
     font-size: 17px;
     line-height: 1.3;
   }
+
+  .contact {
+    background: #024e76;
+    color:#fce138;
+    text-align: center;
+    border-color: #39a6b2;
+    margin-bottom: 25px;
+    font-size: 70px;
+  }
+
+
+  .info {
+    color:#fce138;
+    background: #024e76;
+    text-align: left;
+    font-size: 30px;
+  }
+
+  .contact-info {
+    background:#024e76;
+    text-align: center;
+  }
+
+  .contact h2 {
+    color: #fce138;
+  }
+
+  .contact-info iframe{
+    width: 400px;
+    height: 400px; 
+  }
+
+  .contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: right;
+    margin: 30px 0 0 60px;
+    color: white;
+  }
